[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssmarl"
version = "0.1.0"  # 如果需要动态获取版本，可以参考后续说明
description = "Implementation of Scalable Safe MARL"
readme = "README.md"
requires-python = ">=3.9"

classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]